# dinesafe-toronto

./: .gitignore  LICENSE  Makefile  README.md  metadata.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  test.yml
dinesafe_toronto/: cli.py  migrations.py  service.py
tests/: fixtures.py  test_service.py
