[tool.poetry]
name = "dinesafe-toronto"
version = "0.1.0"
description = "Datasette of the City of Toronto's DineSafe data."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dinesafe_toronto"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
datasette = "^0.64.1"
datasette-block-robots = "^1.1"
datasette-graphql = "^2.1.2"
datasette-gzip = "^0.2"
datasette-publish-vercel = "^0.14.2"
isort = "^5.12.0"
requests = "^2.28.2"
sqlite-utils = "^3.30"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.4"}
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.13"

[tool.poetry.scripts]
dinesafe-toronto = "dinesafe_toronto.cli:cli"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
