[tool.poetry]
name = "dinesafe-toronto"
version = "0.1.0"
description = "Datasette of the City of Toronto's DineSafe data."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dinesafe_toronto"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
datasette = "^0.64.2"
datasette-block-robots = "^1.1"
datasette-dashboards = "^0.3.0"
datasette-graphql = "^2.2"
datasette-gzip = "^0.2"
datasette-publish-vercel = "^0.14.2"
datasette-sentry = "^0.3"
isort = "^5.12.0"
requests = "^2.28.2"
sqlite-utils = "^3.30"

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "^1.7.5"}
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
responses = "^0.23.1"
ruff = "^0.0.259"

[tool.poetry.scripts]
dinesafe-toronto = "dinesafe_toronto.cli:cli"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
